# fire_and_smoke_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: firefighter_pov_2.avi
models/FnS_detection_model/: args.yaml  events.out.tfevents.1779369514.mu.2610597.0  results.csv
src/config/: config.yaml  config_parser.py  dfire.yaml
src/data/: augment.py  collate.py  dataloader.py  pipeline.py  preprocess.py  process_pipeline.py
src/inference/: predict_image.py  predict_video.py
src/main/: __init__.py  main.py
src/models/: base_model.py
src/training/: eval.py  losses.py  metrics.py  train.py
src/utils/: callbacks.py  helpers.py  logger.py
src/visualization/: visualize.py
